--- a/src/app/components/create-bank-account-form/create-bank-account-form.component.html
+++ b/src/app/components/create-bank-account-form/create-bank-account-form.component.html
@@ -1,22 +1,33 @@
 <div class="formBox">
-    <h4>Create Bank Account Form</h4>
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="card" style="border-radius: 15px;">
+                    <div class="card-body p-5">
+                        <h3 class="text-center mb-5">Create Bank Account</h3>
+                        <form [formGroup]="formdata" (ngSubmit)="createBankAccount(formdata.value)">
+                            <div class="form-group">
+                                <label for="nameId" class="form-label">Name </label>
+                                <input class="form-control" id="nameId" name="nameField" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="descriptionId" class="form-label">Description </label>
+                                <input class="form-control" id="descriptionId" name="descriptionField" placeholder="Description">
+                            </div>
+                            <div class="form-group">
+                                <label for="accountType" class="form-label">Account Type </label>
 
-    <div class="form-group">
-        <label for="nameId" class="form-label">Name: </label>
-        <input [(ngModel)]="formName" class="form-control" id="nameId" name="nameField">
+                                <select name="accountType" class="form-select">
+                                <option selected value="1">Checking</option>
+                                <option value="2">Savings</option>
+                            </select>
+                            </div>
+                            <br/>
+                            <button class="btn btn-primary">Create Account</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="descriptionId" class="form-label">Description: </label>
-        <input [(ngModel)]="formDescription" class="form-control" id="descriptionId" name="descriptionField">
-    </div>
-    <div class="form-group">
-        <label for="accountType" class="form-label">Account Type: </label>
-        <select [(ngModel)]="formAccountType" name="accountType" class="form-select">
-                <option value="1">Checking</option>
-                <option value="2">Savings</option>
-            </select>
-    </div>
-
-    <br/>
-    <button (click)="createBankAccount()" class="btn btn-primary">Create Account</button>
 </div>
