--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,29 @@
 <div class="position-absolute top-50 start-50 translate-middle container">
-    <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
-        <div *ngIf="showErrorMessage">
-            <p style="color: red;">Invalid username and password Please try again</p>
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="card" style="border-radius: 15px;">
+                    <div class="card-body p-5">
+                        <h3 class="text-center mb-5">Welcome!</h3>
+                        <form [formGroup]="formdata" (ngSubmit)="onClickSubmit(formdata.value)">
+                            <div *ngIf="showErrorMessage">
+                                <p style="color: red;">Invalid credentials. Please try again.</p>
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">User Name</label>
+                                <input type="text" name="loginUsername" placeholder="Username" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" class="fortextbox" name="loginPassword" placeholder="Password" formControlName="loginPassword" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <input type="submit" class="btn btn-primary btn-block btn-lg gradient-custom-4 text-body" value="Log In">
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">User Name</label>
-            <input type="text" name="loginUsername" placeholder="user name" formControlName="loginUsername" class="form-control" id="exampleInputEmail1">
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="fortextbox" name="loginPassword" placeholder="password" formControlName="loginPassword" class="form-control" id="exampleInputPassword1">
-        </div>
-        <input type="submit" class="btn btn-primary" value="Log In">
-    </form>
-</div>
+    </div>
