--- a/src/app/components/navbar-login/navbar-login.component.css
+++ b/src/app/components/navbar-login/navbar-login.component.css
@@ -13,7 +13,7 @@
 .navbar .navbar-brand {
     font-family: 'Montserrat Alternates', sans-serif;
     font-family: 'Moon Dance', cursive;
-    font-size: 4vw;
+    font-size: 30px;
 }
 
 
