--- a/src/app/components/navbar-login/navbar-login.component.html
+++ b/src/app/components/navbar-login/navbar-login.component.html
@@ -18,17 +18,17 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
         <a href="#" class="navbar-brand">CashOverflow</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         <div id="main-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <li><a href="#" class="nav-item nav-link active">Home</a></li>
-                <li><a href="#" class="nav-item nav-link">About Us</a></li>
                 <li class="nav-item active">
                     <a class="nav-link" routerLink="/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/register">Register</a>
                 </li>
-                <li><a href="#" class="nav-item nav-link">Contact</a></li>
             </ul>
         </div>
     </div>
