--- a/src/app/components/income-expense/income-expense.component.html
+++ b/src/app/components/income-expense/income-expense.component.html
@@ -9,20 +9,23 @@
                         Transaction Created Successfully
                     </div>
 
-                    <form [formGroup]="transactionForm" (ngSubmit)="transaction()">
+                    <div class="form-group">
                         <div form="form-outline mb-4">
                             <label for="accounts">Accounts</label>
 
-                            <!-- <select id="accounts" class="form-select" aria-label="Choose a transaction type"  required>
+                            <select [(ngModel)]="formAccountId" id="accounts" class="form-select"
+                                aria-label="Choose a transaction type" required>
                                 <option selected disabled>Select an account for a transaction</option>
-                                <option *ngFor="let account of accounts" formControlName="accountId" value="account.id" [(ngModel)]="account.balance" [ngModelOptions]="{standalone: true}">{{account.name}} {{"$" + account.balance}}</option>
-                            </select> -->
+                                <option *ngFor="let account of accounts" value="account.id">{{account.name}} {{"$" +
+                                    account.balance}}
+                                </option>
+                            </select>
 
                         </div>
                         <div form="form-outline mb-4">
                             <label for="type">Type</label>
-                            <select id="type" formControlName="type" class="form-select"
-                                aria-label="Choose a transaction type" [(ngModel)]="transactionType"required>
+                            <select [(ngModel)]="formTransactionType" id="type" class="form-select"
+                                aria-label="Choose a transaction type" required>
                                 <option selected disabled>Choose a transaction type</option>
                                 <option value="2">Income</option>
                                 <option value="1">Expense</option>
@@ -30,24 +33,25 @@
                         </div>
                         <div form="form-outline mb-4">
                             <label for="amount">Amount</label>
-                            <input class="form-control" id="amount" type="number" step="0.01" min="0.01"
-                                formControlName="amount" [(ngModel)]="amountCheck" required>
+                            <input [(ngModel)]="formAmount" class="form-control" id="amount" type="number" step="0.01"
+                                min="0.01" required>
                         </div>
                         <div form="form-outline mb-4">
                             <label for="name">Name</label>
-                            <input class="form-control" id="name" type="text" formControlName="name" required>
+                            <input [(ngModel)]="formName" class="form-control" id="name" type="text" required>
                         </div>
                         <div form="form-outline mb-4">
                             <label for="exampleFormControlTextarea1">Description</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1"
-                                formControlName="description" rows="2" required></textarea>
+                            <textarea [(ngModel)]="formDescription" class="form-control"
+                                id="exampleFormControlTextarea1" rows="2" required></textarea>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button type="submit"
+                            <button (click)="transaction()"
                                 class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Create
                                 Transaction</button>
                         </div>
-                    </form>
+                    </div>
+
                 </div>
             </div>
         </div>
